--- a/app/src/main/res/layout/cock_insert_fragment.xml
+++ b/app/src/main/res/layout/cock_insert_fragment.xml
@@ -342,6 +342,12 @@
 
             </LinearLayout>
 
+
+            <Button
+                android:id="@+id/save"
+                android:text="保存"
+                style="@style/btnSaveStyle"/>
+
         </LinearLayout>
     </com.tutu.pestcs.widget.OverScrollView>
 </com.tutu.pestcs.widget.TuLinearLayout>
