--- a/app/src/main/res/layout/flies_insert_fragment.xml
+++ b/app/src/main/res/layout/flies_insert_fragment.xml
@@ -829,6 +829,11 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <Button
+                android:id="@+id/save"
+                android:text="保存"
+                style="@style/btnSaveStyle"/>
+
         </LinearLayout>
 
 
