--- a/app/src/main/res/layout/review_note_fragment.xml
+++ b/app/src/main/res/layout/review_note_fragment.xml
@@ -33,6 +33,7 @@
                 android:paddingLeft="8dp"
                 android:paddingTop="8dp"/>
 
+            <include layout="@layout/review_save_delete_photo"/>
 
         </LinearLayout>
 
