--- a/app/src/main/res/layout/review_cock_fragment.xml
+++ b/app/src/main/res/layout/review_cock_fragment.xml
@@ -340,6 +340,8 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <include layout="@layout/review_save_delete_photo"/>
+
         </LinearLayout>
     </com.tutu.pestcs.widget.OverScrollView>
 </com.tutu.pestcs.widget.TuLinearLayout>
