--- a/app/src/main/res/layout/review_mosquitos_fragment.xml
+++ b/app/src/main/res/layout/review_mosquitos_fragment.xml
@@ -834,6 +834,8 @@
                     </RadioGroup>
                 </HorizontalScrollView>
             </LinearLayout>
+
+            <include layout="@layout/review_save_delete_photo"/>
         </LinearLayout>
 
 
